# python-doc-assistant

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  PLAN.md  README.md  SUMMARY.md  config.toml  pyproject.toml
eval_sets/: v0_core.jsonl  v1_out_of_scope_20.jsonl  v2_full.jsonl
experiments/: v0-bm25-only.md  v1-qwen-grounded.md  v2-ablation.md  v3-tinydocs-vs-qwen.md  v3.1-fineweb-sft-narrative.md  v4-prod-track.md
experiments/runs/2026-04-27T07-17-09-v0-bm25/: per_query.jsonl  results.json
experiments/runs/2026-04-28T00-08-32-v1-qwen/: human_scores.jsonl  per_query.jsonl  results.json
experiments/runs/2026-04-28T00-23-02-v1-coder/: human_scores.jsonl  per_query.jsonl  results.json
experiments/runs/2026-04-28T02-04-35-v1-qwen-oos/: per_query.jsonl  results.json
experiments/runs/2026-04-28T02-10-13-v1-coder-oos/: per_query.jsonl  results.json
experiments/runs/2026-04-28T11-18-08-v2-bm25/: per_query.jsonl  results.json
experiments/runs/2026-04-28T11-18-15-v2-symbol-bm25/: per_query.jsonl  results.json
experiments/runs/2026-04-28T11-18-38-v2-dense/: per_query.jsonl  results.json
experiments/runs/2026-04-28T11-19-00-v2-hybrid-rrf/: per_query.jsonl  results.json
experiments/runs/2026-04-28T11-19-33-v2-hybrid-linear-a05/: per_query.jsonl  results.json
experiments/runs/2026-04-28T11-22-49-v2-hybrid-rrf-rerank/: per_query.jsonl  results.json
experiments/runs/2026-04-28T11-24-40-v2-hybrid-linear-a02/: per_query.jsonl  results.json
experiments/runs/2026-04-28T11-24-57-v2-hybrid-linear-a03/: per_query.jsonl  results.json
experiments/runs/2026-04-28T11-25-16-v2-hybrid-linear-a07/: per_query.jsonl  results.json
experiments/runs/2026-04-28T11-25-33-v2-hybrid-linear-a08/: per_query.jsonl  results.json
experiments/runs/2026-04-28T11-28-26-v2-hybrid-linear-a03-rerank/: per_query.jsonl  results.json
experiments/runs/2026-04-28T11-30-16-v2-dense-rerank/: per_query.jsonl  results.json
experiments/runs/2026-04-28T12-16-13-v2-dense-rerank-qwen/: judge_scores.jsonl  judge_scores_haiku.jsonl  per_query.jsonl  results.json  results_haiku.json
experiments/runs/2026-04-29T03-49-30-v2-symbol-bm25-qwen/: judge_scores.jsonl  per_query.jsonl  results.json
experiments/runs/2026-04-29T04-27-27-v2-dense-qwen/: judge_scores.jsonl  per_query.jsonl  results.json
frontend/: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts  vite-env.d.ts
frontend/src/components/: ChatBox.tsx  (+9 more)
plans/: v0-retrieval-eval.md  v1-qwen-generator.md  v2-ablation.md  v3-tiny-llm.md  v3.1-fineweb-sft.md  v4-prod-ready.md
scripts/: build_fineweb_corpus.py  build_pretrain_corpus.py  build_sft_corpus.py  encode_corpus.py  per_type_metrics.py  pretrain_tinydocs.py  sample_corpus.py  sft_finetune_tinydocs.py  train_tokenizer.py  triage_failures.py
src/python_doc_assistant/: cli.py
tests/: test_bm25_index.py  test_chunker.py  test_cli.py  test_dense_index.py  test_eval_dataset.py  test_factory.py  test_generation_eval.py  test_generator_interface.py  test_grounded_prompt.py  test_human_scoring.py  test_hybrid.py  test_hyde.py  test_ingest.py  test_judge.py  test_parse_objects_inv.py  test_query_rewriter.py  test_qwen_generator.py  test_qwen_gguf_backend.py  test_rerank.py  test_retrieval_metrics.py  test_router.py  test_run_writer.py  test_sample_corpus.py  test_service_app.py  test_service_mcp.py  test_service_playground.py  test_service_streaming.py  test_sft_corpus.py  test_sft_train.py  test_symbol_index.py  test_tinydocs_backend.py  test_tinydocs_data_mix.py  test_tinydocs_dataset.py  test_tinydocs_model.py  test_tinydocs_tokenizer.py  test_tinydocs_train.py
(+79 files in other folders)
