[build-system]
requires = ["hatchling"]                                                                                     
build-backend = "hatchling.build"

[project]
name = "python-doc-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]
ingest = ["beautifulsoup4", "lxml", "sphobjinv", "requests"]
retrieval = ["rank-bm25", "numpy", "rapidfuzz"]

[project.scripts]
python-doc-assistant = "python_doc_assistant.cli:main"
pdr = "python_doc_assistant.cli:main"

[tool.hatch.build.targets.wheel]                                                                             
packages = ["src/python_doc_assistant"]    

[tool.ruff]                                                                                                  
line-length = 100                                         
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]   # pycodestyle errors + pyflakes + isort
                                                                                                            
[tool.mypy]
python_version = "3.11"                                                                                      
strict = true                                             
files = ["src", "tests"]                                                                                     

[tool.pytest.ini_options]                                                                                    
testpaths = ["tests"]    