[build-system]
requires = ["hatchling"]                                                                                     
build-backend = "hatchling.build"

[project]
name = "python-doc-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click",
    "rapidfuzz>=3.14.5",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy", "ipython", "types-requests"]
ingest = ["beautifulsoup4", "lxml", "sphobjinv", "requests"]
retrieval = ["rank-bm25", "numpy", "rapidfuzz"]
generation = ["transformers", "torch", "accelerate"]
embedding = ["sentence-transformers", "numpy"]
rerank = ["sentence-transformers"]
judge = ["anthropic"]
tinydocs = ["torch", "tokenizers"]

[project.scripts]
python-doc-assistant = "python_doc_assistant.cli:main"
pdr = "python_doc_assistant.cli:main"

[tool.hatch.build.targets.wheel]                                                                             
packages = ["src/python_doc_assistant"]    

[tool.ruff]                                                                                                  
line-length = 100                                         
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]   # pycodestyle errors + pyflakes + isort
                                                                                                            
[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = "sphobjinv.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "rank_bm25.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sentence_transformers.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "anthropic.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tqdm.*"
ignore_missing_imports = true

[tool.pytest.ini_options]                                                                                    
testpaths = ["tests"]    

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
